# nentrokey

./: .gitignore  Cargo.toml  README.md
bitwise/: hash_256.rs  parallel_256.rs
src/: encryption_ops.rs  encryption_types.rs  errors.rs  hash_audit.rs  lib.rs  main.rs  metrics.rs  utils.rs
src/tests/: test_cli.rs
